<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent">
	
	<TextView android:textAppearance="?android:attr/textAppearanceMedium"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:id="@+id/hostTextView" android:text="@string/host"></TextView>
	<EditText android:layout_width="match_parent"
		android:layout_height="wrap_content" android:id="@+id/edit_host"></EditText>
	
	<TextView android:textAppearance="?android:attr/textAppearanceMedium"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:id="@+id/portTextView" android:text="@string/jade_port"></TextView>
	<EditText android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/edit_jade_port"></EditText>
	
	<TextView android:textAppearance="?android:attr/textAppearanceMedium"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:id="@+id/web_portTextView" android:text="@string/web_port"></TextView>
	<EditText android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/edit_web_port"></EditText>
	
	<TextView android:textAppearance="?android:attr/textAppearanceMedium"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:id="@+id/directoryTextView" android:text="@string/directory"></TextView>
	<EditText android:layout_width="match_parent"
		android:layout_height="wrap_content" android:id="@+id/edit_directory"></EditText>
	
	<TextView android:textAppearance="?android:attr/textAppearanceMedium"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:id="@+id/nicknameTextView" android:text="@string/nickname"></TextView>
	<EditText android:layout_width="match_parent"
		android:layout_height="wrap_content" android:id="@+id/edit_nickname"></EditText>
	
	
	<Button android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_gravity="center_horizontal"
		android:id="@+id/button_submit" android:text="@string/button_submit"></Button>
</LinearLayout>